[tool.poetry]
name = "async-download-service"
version = "0.1.0"
description = ""
authors = ["Dmitry Plevkov <wwarne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
